--- a/Sample Razor Pages Application/Sample Razor Pages Application.csproj
+++ b/Sample Razor Pages Application/Sample Razor Pages Application.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Pages\" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
   </ItemGroup>
 
 </Project>
